--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,68 @@
-body{
-    background-color: aqua;
+body {
+  margin: 0;
+  font-family: Roboto;
+}
+
+header {
+  padding: 20px;
+  background-color: green;
+  overflow: auto;
+}
+
+ul {
+  margin: 0;
+}
+
+nav {
+  float: right;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  margin-right: 20px;
+  font-size: 20px;
+}
+
+.text-center {
+  text-align: center;
+}
+
+#contact {
+  background-color: indianred;
+  padding: 20px;
+}
+
+#contact h2 {
+  margin-top: 0;
+}
+
+#contact form {
+  border: black solid 3px;
+  border-radius: 10px;
+  width: 50%;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+#contact button {
+  padding: 10px;
+  margin-top: 10px;
+  background-color: lightblue;
+  border: none;
+  border-radius: 5px;
+}
+#contact button:hover {
+  background-color: rgb(115, 179, 200);
+  cursor: pointer;
+}
+
+footer {
+  background-color: green;
+  padding: 20px;
+  color: white;
+}
+
+footer p {
+  margin: 0;
 }
